--- a/Portfolio.html
+++ b/Portfolio.html
@@ -26,7 +26,7 @@
          <p>I BELIEVE IN<br><br>
 
           <b>EAT(); SLEEP(); GAME(); REPEAT();</b></p>
-          <img src="C:\Users\dilee\OneDrive\Downloads\Ashborn.jpg">
+          <img src="Ashborn.jpg">
    </section>
    <section id="Bio">
     <h2>About</h2>
